# SSARVIS

./: .gitignore  README.md  build.txt
ai/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.integration.yml  docker-compose.yml  main.py  pyproject.toml
ai/.tmp/: voice-request.json
ai/app/: main.py  prompts.py
ai/app/api/: router.py
ai/app/config/: __init__.py  base.py  chat.py  dashscope.py  database.py  local_tts.py  media.py  openai.py  prompt.py  storage.py  vectordb.py
ai/app/core/: database.py  setting.py
ai/app/domains/chat/: exceptions.py  model.py  repository.py  router.py  schema.py  service.py
ai/app/domains/prompt/: __init__.py  exceptions.py  model.py  repository.py  router.py  schema.py  service.py
ai/app/domains/voice/: __init__.py  exceptions.py  model.py  repository.py  router.py  (+2 more)
ai/app/exceptions/: __init__.py  base.py  database.py  infra.py
ai/app/infra/: audio_buffer.py  audio_transcoder.py  dashscope.py  local_tts.py  openai.py  opus.py  prompt_loader.py  qdrant.py  s3compatible.py  tts_storage.py  webm.py
ai/app/prompts/: public_conversation_guideline.md  response_guideline.md  similar_conversations_prefix.md  system_prompt_meta.md  system_prompt_meta_update.md
ai/app/test/: test_audio_buffer.py  test_chat_context.py  test_chat_context_builder.py  test_chat_router.py  test_chat_service.py  test_dashscope.py  test_openai_client.py  test_opus.py  test_prompt.py  test_qdrant.py  test_s3compatible.py  test_tts_storage.py  test_voice.py
ai/app/utils/: helpers.py
ai/tests/integration/: conftest.py  test_api.py
(+372 files in other folders)
