[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.0",
    "fastapi>=0.135.1",
    "openai>=2.0.0",
    "opuslib>=3.0.1",
    "pydantic-settings>=2.0.0",
    "qdrant-client>=1.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "ruff",
]
