[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dashscope>=1.25.13",
    "fastapi>=0.135.1",
    "openai>=2.0.0",
    "opuslib>=3.0.1",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.0.0",
    "qdrant-client>=1.0.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "ruff",
    "websocket-client>=1.8.0",
]
